--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ecommerce-front",
   "version": "0.1.0",
+  "proxy": "http://server:8000",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
