--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.1.2",
-    "braintree-web": "^3.58.0",
-    "braintree-web-drop-in-react": "^1.1.0",
+    "braintree-web": "^3.101.1",
+    "braintree-web-drop-in-react": "^1.2.1",
     "fetch": "^1.1.0",
-    "moment": "^2.24.0",
-    "query-string": "^6.11.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "moment": "^2.30.1",
+    "query-string": "^6.14.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.3.4",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
